# rfin

./: .cursorignore  .deepsource.toml  .dockerignore  .env.example  .gitignore  .gitleaksignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTION_COMPLETE_ALL_PLATFORMS.md  ATTRIBUTION_SERIALIZATION_SUMMARY.md  BENCHMARKS_SUMMARY.md  BETA_PREP_COMPLETE.md  BETA_RELEASE_CHECKLIST.md  BINDINGS_DX_AUDIT.md  BINDINGS_DX_COMPLETE.md  BINDINGS_DX_COMPLETION_PLAN.md  BINDINGS_DX_DETAILED_PLAN.md  BINDINGS_DX_FINAL_STATUS.md  BINDINGS_DX_IMPLEMENTATION_COMPLETE.md  BINDINGS_DX_IMPLEMENTATION_PROGRESS.md  BINDINGS_DX_PLAN_VERIFICATION.md  BINDINGS_DX_RELEASE_NOTES.md  BINDINGS_REVIEW_SUMMARY.md  CASHFLOW_EXTRACTION_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONVERSION_SUMMARY.md  CORRELATION_FIX_SUMMARY.md  CRITICAL_DEFAULT_BUG_FIX.md  Cargo.toml  Cargo.toml.bak  DOC_TEST_CLEANUP_SUMMARY.md  FEATURE_FLAGS_SUMMARY.md  F_TO_F64_REFACTOR.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVARIANTS.md  IRR_ANALYSIS_SUMMARY.md  JSDOC_COMPLETION_REPORT.md  (+72 more)
core/: CHANGELOG.md  Cargo.toml  build.rs  currency_build.rs
core/benches/: monotone_convex.rs
core/data/: iso_4217.csv
core/src/: currency.rs  dates.rs  error.rs  lib.rs  macros.rs  money.rs  primitives.rs
core/tests/: calendars.rs  interp_linear.rs
finstack/: Cargo.toml  REMEDIATION_INVESTIGATION.md
finstack-py/: .deepsource.toml  Cargo.toml  DOCS_STYLE.md  README.md  SCENARIOS_BINDINGS.md  STUB_GENERATION.md  mc_paths_export.parquet  parity_contract.toml
finstack-py/benches/: README.md  __init__.py  test_bond_pricing.py  test_curve_calibration.py  test_statement_evaluation.py
finstack-py/benchmarks/: __init__.py  bench_bindings.py
finstack-py/beta-testing/: BUILD_GUIDE.md  FEEDBACK_SURVEY.md  INSTALL_GUIDE.md  OVERVIEW.md  README.md
finstack-py/docs/: CODE_QUALITY_REVIEW.md  PYTHON_ATTRIBUTION_PARITY_COMPLETE.md  SCENARIOS_BINDINGS.md  conf.py  index.rst
finstack-py/examples/: 01_ecl_ifrs9.py  02_credit_scoring_pd.py  04_comparable_company.py  05_credit_events.py  06_fourier_pricing.py  10_dynamic_term_structure.py  12_liquidity_risk.py  14_exotic_rates.py  README.md  dataframe_io_guide.py  run_all_notebooks.py
finstack-py/finstack/: .gitignore  __init__.py  __init__.pyi  _binding_exports.py  finstack.pyi  portfolio.pyi  scenarios.pyi  statements.pyi  valuations.pyi
finstack-py/src/: cashflow.rs  config.rs  currency.rs  dates.rs  error.rs  errors.rs  lib.rs  money.rs  utils.rs
finstack-py/tests/: README_DOC_TESTING.md  __init__.py  conftest.py  stubtest_allowlist.txt  test_analytics.py  test_analytics_parity.py  test_asw_forward.py  test_attribution.py  test_attribution_serialization.py  test_calibration.py  test_cashflow_builder.py  test_cashflows.py  test_core_default_behaviors.py  test_core_parity.py  test_correlation.py  test_covenant_forecast.py  test_credit_factor_model_bindings.py  test_credit_specs_bindings.py  test_dataframe_conversions.py  test_doc_examples.py  test_envelope_diagnostics.py  test_envelope_typeddict.py  test_error_handling.py  test_example_scripts_smoke.py  test_exotic_valuations.py  test_explanation_bindings.py  test_expr.py  test_extensions.py  test_factor_model.py  test_fx_valuations.py  test_goal_seek.py  test_instrument_json_api.py  test_json_binding_roundtrips.py  test_margin.py  test_market_context_json_api.py  test_merton_bindings.py  test_merton_mc_bindings.py  test_money_decimal.py  test_monte_carlo.py  test_namespace.py  (+22 more)
finstack-py/tools/: fix_pyi_docstrings.py
finstack-wasm/: .deepsource.toml  .eslintrc.json  .prettierignore  .prettierrc.json  CALIBRATION_API_GUIDE.md  CALIBRATION_COMPLETE.md  CALIBRATION_FINAL.md  CALIBRATION_SUMMARY.md  CHANGELOG.md  Cargo.toml  DOCS_STYLE.md  FINAL_MIGRATION_COMMANDS.md  IMPLEMENTATION_SUMMARY.md  INSTRUMENTS_COVERAGE.md  INSTRUMENT_WRAPPER_MIGRATION.md  JSDOC_IMPROVEMENTS.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  PARITY.md  QUICK_MIGRATION_REFERENCE.md  README.md  UNIFIED_ERROR_HANDLING.md  WRAPPER_CONSOLIDATION_COMPLETE.md  attribution.d.ts  complete_migrations.sh  eslint.config.js  index.d.ts  index.js  migrate_all_instruments.sh  package-lock.json  package.json
finstack-wasm/.cargo/: config.toml
finstack-wasm/benchmarks/: bench.mjs
finstack-wasm/docs/: CODE_QUALITY_REVIEW.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_BINDINGS.md  PORTFOLIO_QUICKSTART.md  SCENARIOS_BINDINGS.md  SCENARIOS_IMPLEMENTATION_SUMMARY.md  SCENARIOS_QUICKSTART.md  STATEMENTS_QUICKSTART.md  WASM_ATTRIBUTION_COMPLETE.md
finstack-wasm/examples/: EXAMPLES_VERIFICATION.md  MARKET_VALUE_VERIFICATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  attribution-example.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
finstack-wasm/exports/: analytics.js  cashflows.js  core.js  correlation.js  margin.js  monte_carlo.js  portfolio.js  scenarios.js  statements.js  statements_analytics.js  valuations.js
finstack-wasm/scripts/: check-dts-docs.mjs
finstack-wasm/src/: calendar.rs  cashflow.rs  currency.rs  dates.rs  lib.rs  money.rs  schedule.rs
finstack-wasm/tests/: benchmarks.rs  core_serialization_tests.rs  dts_contract.rs  namespace_parity.rs  parity_tests.rs  portfolio_tests.rs  scenarios_tests.rs  statements_tests.rs  wasm_analytics.rs  wasm_cashflows.rs  wasm_core_market_data.rs  wasm_credit_factor_hierarchy.rs  wasm_margin.rs  wasm_math.rs  wasm_monte_carlo.rs  wasm_portfolio.rs  wasm_scenarios.rs  wasm_statements.rs  wasm_statements_analytics.rs  wasm_valuations.rs
finstack/analysis/: Cargo.toml
finstack/analytics/: Cargo.toml  README.md
finstack/cashflows/: Cargo.toml  README.md
finstack/core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
finstack/correlation/: Cargo.toml  README.md
finstack/examples/: README.md
finstack/io/: Cargo.toml  README.md
finstack/margin/: Cargo.toml  README.md
finstack/monte_carlo/: Cargo.toml  README.md
finstack/portfolio/: Cargo.toml  (+4 more)
rfin-python/: Cargo.toml  README.md  rfin.pyi
rfin-wasm/: Cargo.toml  README.md  package.json
(+9277 files in other folders)
