[workspace]
members = [
    "finstack/core",
    "finstack/statements",
    "finstack/valuations",
    "finstack/valuations/macros",
    "finstack/portfolio",
    "finstack/io",
    "finstack-py",
    "finstack-wasm",
    "finstack"
]
resolver = "2"

# Exclude Python and WASM bindings from default builds and coverage
default-members = [
    "finstack/core",
    "finstack/statements", 
    "finstack/valuations",
    "finstack/valuations/macros",
    "finstack/portfolio",
    "finstack/io",
    "finstack"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.78"
authors = ["Jon Eickmeier (me@jeickmeier.com)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfin/rfin"

[workspace.dependencies]
# Synchronized enum and macro crates to prevent version mismatches
strum = "0.25"
strum_macros = "0.25"

# Coverage-specific build profile to avoid metadata mismatches
[profile.dev]
# Disable incremental compilation for better coverage consistency
incremental = false
# Ensure consistent optimization level
opt-level = 0
# Generate debug info but keep it simple
debug = 1
# Disable LTO that can cause coverage issues
lto = false

[profile.test]
# Similar settings for test builds
incremental = false
opt-level = 0
debug = 1
lto = false
