[workspace]
members = [
    "finstack/core",
    "finstack/statements",
    "finstack/valuations",
    "finstack/valuations/macros",
    "finstack/portfolio",
    "finstack/io",
    "finstack/scenarios",
    "finstack-py",
    "finstack-wasm",
    "finstack"
]
resolver = "2"

# Exclude Python and WASM bindings from default builds and coverage
default-members = [
    "finstack/core",
    "finstack/statements", 
    "finstack/valuations",
    "finstack/portfolio",
    "finstack/io",
    "finstack/scenarios",
    "finstack"
]

[workspace.metadata.coverage]
# Coverage configuration: only run on core Rust library, not bindings
exclude = ["finstack-py", "finstack-wasm"]
# Additional patterns to exclude from coverage reports
ignore-filename-regex = ["tests?/", "target/", "\\.cargo/", ".*finstack-py/.*", ".*finstack-wasm/.*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.90"
authors = ["Jon Eickmeier (me@jeickmeier.com)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfin/rfin"

[workspace.dependencies]
# Synchronized enum and macro crates to prevent version mismatches
strum = "0.25"
strum_macros = "0.25"
# Fast hash for integer keys in hot paths
rustc-hash = "2.0"

# Build profiles
[profile.dev]
# Standard development profile (cargo-llvm-cov will override these for coverage runs)
incremental = true
opt-level = 0
debug = 2

[profile.test]
# Standard test profile
# Reduced debug level for faster compilation (line info only, no full debug symbols)
incremental = true
opt-level = 0
debug = 1

[profile.release]
# Performance-optimized release profile (default)
# Optimizes for speed with good compile times
opt-level = 3           # Optimize for speed
lto = "thin"            # Link-time optimization (faster than full LTO)
codegen-units = 16      # Balance compile time vs optimization
strip = "symbols"       # Strip symbols but keep debug info for profiling

[profile.release-size]
# Size-optimized profile for WASM bundle size
# Use: cargo build --profile release-size
# Or: wasm-pack build --profile release-size
inherits = "release"
opt-level = "z"         # Optimize for size
lto = true              # Full link-time optimization
codegen-units = 1       # Maximum optimization (slower compile, smaller output)
strip = true            # Strip all symbols

[profile.release-perf]
# Legacy performance profile (use default release instead)
# Use: cargo build --profile release-perf
inherits = "release"
opt-level = 3       # Optimize for speed instead of size
lto = "thin"        # Link-time optimization (faster than full LTO)
codegen-units = 8   # Balance compile time vs optimization
strip = true

[profile.bench]
# Optimized profile for benchmarking
# Automatically used by `cargo bench`
inherits = "release"
opt-level = 3       # Optimize for speed
lto = "thin"        # Link-time optimization
debug = 1           # Line info for profiling tools (flamegraph, perf)
