[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
authors = ["Jon Eickmeier (me@jeickmeier.com)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfin/rfin"

[workspace]
members = [
    "finstack/core",
    "finstack/correlation",
    "finstack/analytics",
    "finstack/statements",
    "finstack/valuations",
    "finstack/valuations/macros",
    "finstack/portfolio",
    "finstack/scenarios",
    "finstack-py",
    "finstack-wasm",
    "finstack"
]
resolver = "2"

# Exclude Python and WASM bindings from default builds and coverage
default-members = [
    "finstack/core",
    "finstack/analytics",
    "finstack/statements",
    "finstack/valuations",
    "finstack/portfolio",
    "finstack/scenarios",
    "finstack"
]

[workspace.metadata.coverage]
# Coverage configuration: only run on core Rust library, not bindings
exclude = ["finstack-py", "finstack-wasm"]
# Additional patterns to exclude from coverage reports
ignore-filename-regex = ["tests?/", "target/", "\\.cargo/", ".*finstack-py/.*", ".*finstack-wasm/.*"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "2"
# Date/time
time = { version = "0.3" }
# Collections
indexmap = "2"
# Decimal arithmetic
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
# Synchronized enum and macro crates to prevent version mismatches
strum = "0.28"
strum_macros = "0.28"
# Fast hash for integer keys in hot paths
rustc-hash = "2.1"

[patch.crates-io]
pyo3-polars = { path = "vendor/pyo3-polars-0.26.0" }
polars-error = { path = "vendor/polars-error-0.53.0" }
polars-plan = { path = "vendor/polars-plan-0.53.0" }
polars-lazy = { path = "vendor/polars-lazy-0.53.0" }
polars-utils = { path = "vendor/polars-utils-0.53.0" }

# Build profiles
[profile.dev]
# Standard development profile (cargo-llvm-cov will override these for coverage runs)
incremental = true
opt-level = 0
debug = 2

[profile.test]
# Standard test profile
# Reduced debug level for faster compilation (line info only, no full debug symbols)
incremental = true
opt-level = 0
debug = 1

[profile.release]
# Performance-optimized release profile (default)
# Optimizes for speed with good compile times
opt-level = 3           # Optimize for speed
lto = "thin"            # Link-time optimization (faster than full LTO)
codegen-units = 16      # Balance compile time vs optimization
strip = "symbols"       # Strip symbols but keep debug info for profiling

[profile.release-size]
# Size-optimized profile for WASM bundle size
# Use: cargo build --profile release-size
# Or: wasm-pack build --profile release-size
inherits = "release"
opt-level = "z"         # Optimize for size
lto = true              # Full link-time optimization
codegen-units = 1       # Maximum optimization (slower compile, smaller output)
strip = true            # Strip all symbols

[profile.release-perf]
# Legacy performance profile (use default release instead)
# Use: cargo build --profile release-perf
inherits = "release"
opt-level = 3       # Optimize for speed instead of size
lto = "thin"        # Link-time optimization (faster than full LTO)
codegen-units = 8   # Balance compile time vs optimization
strip = true

[profile.bench]
# Optimized profile for benchmarking
# Automatically used by `cargo bench`
inherits = "release"
opt-level = 3       # Optimize for speed
lto = "thin"        # Link-time optimization
debug = 1           # Line info for profiling tools (flamegraph, perf)

[workspace.metadata.clippy]
profile = "finstack-strict"

[workspace.lints.clippy]
# ---- SAFETY / NO PANICS ----
# Never allow panicking in library code.
"panic" = "deny"
"unwrap_used" = "deny"
"expect_used" = "deny"
"unreachable" = "deny"
"indexing_slicing" = "deny"     # deny vec[i] unless bounds-checked
"wildcard_dependencies" = "deny"

# ---- NUMERICAL SOUNDNESS ----
# Avoid floating-point surprises
"float_cmp" = "warn"            # use approx comparisons
"lossy_float_literal" = "deny"

# ---- ERROR HANDLING ----
"result_large_err" = "warn"     # catches heavy error types
"match_wild_err_arm" = "deny"   # no wildcard catching errors
"needless_borrow" = "warn"

# ---- API DESIGN / READABILITY ----
"missing_docs_in_private_items" = "allow"
"missing_docs" = "warn"         # encourage docs for public API
"too_many_arguments" = "warn"
"type_complexity" = "warn"
"large_enum_variant" = "warn"
"module_name_repetitions" = "allow"   # allow finstack_valuations::valuations
"too_many_lines"="warn"

# ---- PERFORMANCE ----
"map_clone" = "warn"
"clone_on_ref_ptr" = "deny"
"unused_async" = "warn"
"boxed_local" = "deny"

# ---- CORRECTNESS ----
"match_like_matches_macro" = "deny"
"redundant_clone" = "deny"
"redundant_field_names" = "deny"
"match_same_arms" = "deny"
"match_wildcard_for_single_variants" = "deny"

# ---- MODERN RUST STYLE ----
"manual_let_else" = "deny"
"manual_ok_or" = "deny"
"manual_strip" = "deny"
"manual_unwrap_or_default" = "deny"
"manual_assert" = "deny"
